syntax = "proto3";

package api;

option go_package = "github.com/RosettaFlow/Carrier-Go/lib/center/api";
option java_multiple_files = true;
option java_package = "com.platon.rosettanet.admin.grpc.lib";

// A represents the basic information of the organization.
message Organization  {
  // org name
    string name = 1;
  // the node_id for org
    string node_id = 2;
  // the identity for org
    string identity_id = 3;
}

message SimpleResponse {
    // 0 for ok, !0 error
    int32  status = 1;
    string msg    = 2;
}

